<resources>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="user">User</string>
    <string name="translator">Translator</string>
    <string name="welcome">Welcome</string>
    <string name="welcomeback">Welcome Back</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="repeatpasswd">Repeat Your Password</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="gender">Gender</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string-array name="genderlist">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="start">Start</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string-array name="languagelist">
        <item>English</item>
        <item>Chinese</item>
    </string-array>
    <string name="cancel">Cancel</string>
    <string name="title_activity_translator2">TranslatorActivity2</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="photo">Photo</string>
    <string name="feedback">Feedback</string>
    <color name="yellow_design">#f78500</color>
</resources>
