<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:id="@+id/welcome_content">

    <Button
        android:id="@+id/button_user"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:text="@string/user"
        android:background=" #F78500"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_translator"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:text="@string/translator"
        android:background="#F78500"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_user" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="215dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="27dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.323" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="333dp"
        android:background="#ffffff"
        android:textColor="#F78500"
        android:text="@string/welcome"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />
    <!--fragment
        android:id="@+id/login_user_fragment"
        android:name="com.etranslate.yidiantong.Login_User_Fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" /-->

</android.support.constraint.ConstraintLayout>