<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <EditText
        android:id="@+id/passwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="272dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/loginname"
        app:layout_constraintTop_toBottomOf="@+id/loginname" />

    <EditText
        android:id="@+id/loginname"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="213dp"
        android:ems="10"
        android:hint="Login Name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/passwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/login"
        android:layout_width="212dp"
        android:layout_height="40dp"
        android:layout_marginBottom="49dp"
        android:background=" #F78500"
        android:text="@string/login"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/register"
        app:layout_constraintEnd_toEndOf="@+id/passwd"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/register"
        app:layout_constraintTop_toBottomOf="@+id/passwd" />

    <Button
        android:id="@+id/register"
        android:layout_width="209dp"
        android:layout_height="43dp"
        android:layout_marginBottom="76dp"
        android:background=" #F78500"
        android:text="@string/register"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <include
        android:id="@+id/include"
        layout="@layout/top_back_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dip"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="472dp"
        android:background="#ffffff"
        android:text="@string/welcomeback"
        android:textColor="#F78500"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>